drone: move to ci
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,6 @@ steps:
     - ./build-kernel --proton --lto
   when:
     branch:
-      - auto-kernel
+      - auto-kernel-ci
     event:
       - push
